# mimc-android-java-sdk

./: README.md
AndroidDemo/MIMCDemo/app/: .gitignore  AndroidManifest.xml  CMakeLists.txt  build.gradle
AndroidDemo/MIMCDemo/app/libs/include/libavutil/: mem.h
AndroidDemo/MIMCDemo/app/proto/: a_v.proto  generate.sh
AndroidDemo/MIMCDemo/app/res/drawable/: btn_shape_def.xml
AndroidDemo/MIMCDemo/app/res/layout/: activity_main.xml  activity_video_call.xml  activity_voice_call.xml  create_group_dialog.xml  create_unlimited_group_dialog.xml  dial_call_dialog.xml  group_info_dialog.xml  join_group_dialog.xml  login_dialog.xml  pull_p2t_history_msg_dialog.xml  query_unlimited_group_online_users_dialog.xml  quit_unlimited_group_dialog.xml  send_group_msg_dialog.xml  update_group_dialog.xml
AndroidDemo/MIMCDemo/app/res/values/: colors.xml  dimens.xml  strings.xml
AndroidDemo/MIMCDemo/app/src/com/xiaomi/mimcdemo/audio/: AudioDecoder.java  AudioEncoder.java  AudioPlayer.java
AndroidDemo/MIMCDemo/app/src/com/xiaomi/mimcdemo/av/: AudioCapture.java  AudioDecoder.java  AudioEncoder.java  AudioPlayer.java  AudioRecorder.java  Capture.java  Codec.java  VideoDecoder.java  VideoEncoder.java
AndroidDemo/MIMCDemo/app/src/com/xiaomi/mimcdemo/bean/: AudioData.java  VideoData.java
AndroidDemo/MIMCDemo/app/src/com/xiaomi/mimcdemo/common/: Log4JConfigure.java  MainActivity.java  MsgHelper.java  ParseJson.java  TimeUtils.java  UserManager.java
AndroidDemo/MIMCDemo/app/src/com/xiaomi/mimcdemo/constant/: Constant.java
AndroidDemo/MIMCDemo/app/src/com/xiaomi/mimcdemo/dialog/: CreateGroupDialog.java  CreateUnlimitedGroupDialog.java  DismissGroupDialog.java  DismissUnlimitedGroupDialog.java  GroupInfoDialog.java  LoginDialog.java  PullP2PHistoryMsgDialog.java  QueryUnlimitedGroupMembersDialog.java  QueryUnlimitedGroupOnlineUsersDialog.java  QuitGroupDialog.java  QuitUnlimitedGroupDialog.java  SendGroupMsgDialog.java  SendMsgDialog.java
AndroidDemo/MIMCDemo/app/src/com/xiaomi/mimcdemo/listener/: OnAudioDecodedListener.java  OnAudioEncodedListener.java  OnCallStateListener.java  (+3 more)
AndroidDemo/MIMCDemo/app/src/main/: AndroidManifest.xml
AndroidDemo/MIMCDemo/app/src/main/jni/: com_xiaomi_mimcdemo_av_FFmpegAudioDecoder.c  com_xiaomi_mimcdemo_av_FFmpegAudioDecoder.h  com_xiaomi_mimcdemo_av_FFmpegAudioEncoder.c  com_xiaomi_mimcdemo_av_FFmpegAudioEncoder.h
AndroidDemo/MIMCDemo/app/src/main/res/drawable/: btn_shape_pressed.xml
AndroidDemo/MIMCDemo/app/src/main/res/layout/: activity_call.xml  activity_voice_call.xml  item_chat_receive.xml  item_chat_send.xml  query_group_info_dialog.xml  send_msg_dialog.xml  voice_dialog.xml
AndroidDemo/MIMCDemo/app/src/main/res/menu/: demo.xml
AndroidDemo/MIMCDemo/app/src/main/res/values/: strings.xml
(+137 files in other folders)
